# Volcanica

./: CMakeLists.txt  Crater.cpp  Crater.h  LICENSE  Main.cpp  Modelos.sln  Modelos.vcxproj  Modelos.vcxproj.filters  README.md  Texture.h  Volcano.cpp  Volcano.h  main.cpp
Downloads/Volcanica-main/: .gitignore  Modelos.sln
Downloads/Volcanica-main/Modelos/: AudioManager.cpp  AudioManager.h  Camara.cpp  Main.cpp  Model.cpp  Model.h  Modelos.vcxproj  Modelos.vcxproj.filters  SeleccionVolcan.cpp  Texture.cpp  Volcan.cpp  Volcan.h  WavLoader.cpp  WavLoader.h  default.vert  scenes.h
Downloads/Volcanica-main/Modelos/models/volcan2/: license.txt
Downloads/Volcanica-main/Modelos/x64/Debug/: vc143.idb  (+1 more)
Header Files/: EBO.h  Mesh.h  Model.h  Shader.h  VAO.h  VBO.h  shaderClass.h
Modelos/: AudioManager.h  Camara.cpp  Camara.h  Camera.cpp  CreditosScene.cpp  CreditosScene.h  Interfaz.cpp  Interfaz.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Modelos.vcxproj  Modelos.vcxproj.filters  PantallaInicio.cpp  PantallaInicio.h  SeleccionVolcan.cpp  SeleccionVolcan.h  ShaderCollider.h  Skybox.cpp  Skybox.h  Terreno.cpp  Terreno.h  Volcan.cpp  Volcan.h  collider.vert  default.frag  imgui.ini  main.cpp  scenes.h
Modelos/libraries/include/json/: json.h
Modelos/libraries/lib/: glfw3.lib
Modelos/models/terreno/: scene.gltf
Modelos/models/volcan1/: scene.gltf
Modelos/models/volcan2/: scene.gltf
Modelos/models/volcan3/: scene.gltf
Modelos/models/volcan4/: license.txt  scene.gltf
Modelos/models/volcan5/: license.txt  scene.gltf
Modelos/models/volcan6/: license.txt  scene.gltf
Modelos/x64/Debug/: Modelos.exe.recipe  ProyectoFinal.exe.recipe  vc143.idb  volcan.obj.enc
Modelos/x64/Debug/Modelos.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Modelos.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Modelos/x64/Debug/ProyectoFinal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ProyectoFinal.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Source file/: EBO.cpp  Mesh.cpp  Model.cpp  Shader.cpp  VAO.cpp  VBO.cpp  main.cpp
Source file/Glad/include/glad/: glad.h
Source file/Glad/src/: glad.c
Volcanica-main/Modelos/: Camara.h  Collider.cpp  Collider.h  Modelos.vcxproj  Modelos.vcxproj.filters  PantallaInicio.cpp  SeleccionVolcan.h  Skybox.cpp  Volcan.cpp  Volcan.h  collider.frag  imgui.ini
Volcanica-main/Modelos/x64/Debug/: Modelos.exe.recipe  vc143.idb
models/volcan3/: scene.gltf
x64/Debug/: Modelos.exe.recipe  vc143.idb
x64/Debug/Modelos.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Modelos.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
(+17 files in other folders)
